2001-12-06  Arik Devens  <arik@gnome.org>

	* gstmediaplay.c (fullscreen_key_press_event): Added a case for
	the q key to switch out of fullscreen.
	(gst_media_play_init): Added signal connect for catching key
	events.
	(window_key_press_event): On space pause / play the media.

2001-12-04  Arik Devens  <arik@gnome.org>

	This is a minor update on a few things while i work on getting the
	new gstplay into cvs. Enjoy :-)
	
	* gstmediaplay.c (on_load_file_selected): As below, commented out
	the addto_playlist line to get rid of GtkCList warnings.
	(gst_media_play_set_fullscreen): Added setting and unsetting of
	the GdkCursor on fullscreen to hide the cursor while playing
	video.

	* main.c (main): Commented out adding to the playlist for now to
	get rid of the GtkCList warning.

2001-08-15  Arik Devens  <arik@gnome.org>

	* gstmediaplay.c (gst_media_play_set_fullscreen): Added a hacky
	check to determine if we are even playing a video. workaround till
	the new libgstplay gets here and makes all of this hackishness
	unnecessary and foolish. ;-)

2001-08-15  Arik Devens  <arik@gnome.org>

	* main.c (main): Disabled the showing of the playlist till it
	works. ;-)

	* gstmediaplay.c (gst_media_play_play_item): New function to play
	an item when selected in the playlist.
	(gst_media_play_show_playlist): New function to show the
	playlist. This is temporary till i do an interface overhaul on the
	player.
	(gst_media_play_addto_playlist): New function to add files to the
	playlist.

	* main.c (main): Added stuff for playlist and for handling
	multiple files from the console.

	* gstmediaplay.h: Added new items to the GstMediaPlay struct for
	playlist stuff and for the fullscreen keypress connection.

	* gstmediaplay.c (fullscreen_key_press_event): New function to
	handle keypress stuff so that we leave fullscreen when the user
	hits the escape key.
	(gst_media_play_set_fullscreen): Added a signal connect/disconnect
	for keypress handling.