@@ -1,5 +1,16 @@
 2001-12-06  Arik Devens  <arik@gnome.org>
 
+	* gstmediaplay.c (window_key_press_event): Added a case for
+	alt+return setting fullscreen to simulate the behavior of windows
+	media player.
+
+2001-12-06  Arik Devens  <arik@gnome.org>
+
+	* gstmediaplay.c (window_key_press_event): Added a case for the m
+	key to switch in and out of fullscreen.
+
+2001-12-06  Arik Devens  <arik@gnome.org>
+
 	* gstmediaplay.c (fullscreen_key_press_event): Added a case for
 	the q key to switch out of fullscreen.
 	(gst_media_play_init): Added signal connect for catching key
